--- a/index.html
+++ b/index.html
@@ -21,113 +21,128 @@
                         serif: ['Playfair Display', 'serif'],
                     },
                     colors: {
-                        primary: '#1e40af',  // Deep Blue
-                        secondary: '#3b82f6', // Bright Blue
-                        accent: '#f59e0b',    // Amber
+                        primary: '#1e40af',
+                        secondary: '#3b82f6',
+                        accent: '#f59e0b',
                         surface: '#f3f4f6',
                     }
                 }
             }
         }
     </script>
+    <style>
+        .tap-target {
+            min-height: 44px;
+        }
+    </style>
 </head>
 
-<body class="bg-surface font-sans text-gray-800 antialiased">
+<body class="bg-surface font-sans text-gray-800 antialiased overflow-x-hidden">
+
     <!-- Navbar -->
-    <nav class="bg-white/90 backdrop-blur-md border-b border-gray-200 sticky top-0 z-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16 sm:h-20 items-center">
-                <div class="flex items-center">
-                    <a href="index.html" class="flex-shrink-0 flex items-center gap-2">
+    <nav class="bg-white/90 backdrop-blur-md border-b border-gray-200 sticky top-0 z-50 h-16 sm:h-20">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
+            <div class="flex justify-between items-center h-full">
+                <div class="flex items-center gap-4">
+                    <!-- Mobile Hamburger -->
+                    <button class="sm:hidden p-2 -ml-2 text-gray-500 tap-target" onclick="toggleMobileMenu()">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+
+                    <a href="index.html" class="flex-shrink-0 flex items-center gap-1">
                         <span class="text-2xl sm:text-3xl font-bold tracking-tighter text-gray-900">CK<span
                                 class="text-primary">.</span></span>
                     </a>
-                    <!-- Desktop Menu -->
+
                     <div class="hidden sm:ml-10 sm:flex sm:space-x-8">
                         <a href="index.html"
-                            class="border-primary text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Home</a>
+                            class="border-primary text-gray-900 border-b-2 px-1 pt-1 text-sm font-medium">Home</a>
                         <a href="flights.html"
-                            class="border-transparent text-gray-500 hover:text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Flights</a>
+                            class="text-gray-500 hover:text-gray-900 px-1 pt-1 text-sm font-medium transition-colors">Flights</a>
                         <a href="packages.html"
-                            class="border-transparent text-gray-500 hover:text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Packages</a>
+                            class="text-gray-500 hover:text-gray-900 px-1 pt-1 text-sm font-medium transition-colors">Packages</a>
                         <a href="booking.html"
-                            class="border-transparent text-gray-500 hover:text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">My
+                            class="text-gray-500 hover:text-gray-900 px-1 pt-1 text-sm font-medium transition-colors">My
                             Trips</a>
                     </div>
                 </div>
 
-                <!-- Mobile: Hamburger -->
-                <div class="flex items-center sm:hidden">
-                    <button class="p-2 text-gray-500"
-                        onclick="document.getElementById('mobile-menu').classList.toggle('hidden')">
-                        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 6h16M4 12h16M4 18h16"></path>
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="hidden sm:flex items-center space-x-4">
+                <div class="flex items-center">
                     <a href="login.html"
-                        class="bg-primary hover:bg-blue-800 text-white px-5 py-2.5 rounded-full text-sm font-medium shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-0.5">Start
+                        class="bg-primary hover:bg-blue-800 text-white px-5 py-2.5 rounded-full text-sm font-bold shadow-lg transition-all tap-target flex items-center">Start
                         Journey</a>
                 </div>
             </div>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu"
-            class="hidden sm:hidden bg-white border-b border-gray-200 px-4 pt-2 pb-4 space-y-2 relative z-50 shadow-lg">
-            <a href="index.html" class="block py-2 text-primary font-bold">Home</a>
-            <a href="flights.html" class="block py-2 text-gray-600">Flights</a>
-            <a href="packages.html" class="block py-2 text-gray-600">Packages</a>
-            <a href="booking.html" class="block py-2 text-gray-600">My Trips</a>
-            <a href="login.html" class="block w-full text-center bg-gray-100 mt-4 py-3 rounded-lg font-bold">Sign In</a>
+        <!-- Mobile Nav Overlay -->
+        <div id="mobile-nav" class="fixed inset-0 bg-black/50 z-50 hidden transition-opacity"
+            onclick="toggleMobileMenu()">
+            <div class="bg-white w-3/4 h-full shadow-2xl p-6 transform -translate-x-full transition-transform duration-300"
+                id="mobile-nav-panel">
+                <div class="flex justify-between items-center mb-8">
+                    <span class="text-2xl font-bold tracking-tighter text-gray-900">CK<span
+                            class="text-primary">.</span></span>
+                    <button class="text-gray-400 p-2" onclick="toggleMobileMenu()">
+                        <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="space-y-6">
+                    <a href="index.html" class="block text-xl font-bold text-primary">Home</a>
+                    <a href="flights.html" class="block text-xl font-bold text-gray-800">Flights</a>
+                    <a href="packages.html" class="block text-xl font-bold text-gray-800">Packages</a>
+                    <a href="booking.html" class="block text-xl font-bold text-gray-800">My Trips</a>
+                </div>
+            </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <div class="relative bg-white overflow-hidden">
-        <div class="max-w-7xl mx-auto">
-            <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+    <div class="relative bg-white overflow-hidden min-h-[600px] lg:min-h-0">
+        <div class="max-w-7xl mx-auto h-full">
+            <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32 h-full">
                 <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                     <div class="sm:text-center lg:text-left">
                         <h1
-                            class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl font-serif">
-                            <span class="block xl:inline">Experience the world</span>
-                            <span class="block text-primary xl:inline">without limits.</span>
+                            class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl font-serif leading-tight">
+                            <span class="block">Experience the world</span>
+                            <span class="block text-primary">without limits.</span>
                         </h1>
                         <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                             Premium private flights and curated luxury packages designed for the modern traveler.
                         </p>
 
-                        <!-- Search Widget (Responsive Stack) -->
+                        <!-- Search Widget -->
                         <div class="mt-8 sm:mt-12 relative z-20">
                             <div
-                                class="bg-white rounded-2xl shadow-xl border border-gray-100 p-4 sm:p-2 max-w-lg lg:max-w-xl mx-auto lg:mx-0">
+                                class="bg-white rounded-3xl shadow-2xl border border-gray-100 p-4 sm:p-2 max-w-lg lg:max-w-xl mx-auto lg:mx-0">
                                 <form action="flights.html" class="space-y-4 px-2 pb-2">
-                                    <div class="flex flex-col sm:grid sm:grid-cols-2 gap-4">
+                                    <div class="flex flex-col sm:grid sm:grid-cols-2 gap-6">
                                         <div class="space-y-1">
                                             <label
-                                                class="text-xs font-bold text-gray-400 uppercase tracking-wider">From</label>
+                                                class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">From</label>
                                             <input type="text" value="New York (JFK)"
-                                                class="w-full h-10 font-semibold text-gray-900 bg-transparent border-b border-gray-200 focus:border-primary focus:outline-none">
+                                                class="w-full font-bold text-gray-900 bg-transparent border-b border-gray-200 focus:border-primary focus:outline-none py-2 px-1">
                                         </div>
                                         <div class="space-y-1">
                                             <label
-                                                class="text-xs font-bold text-gray-400 uppercase tracking-wider">To</label>
+                                                class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">To</label>
                                             <input type="text" value="London (LHR)"
-                                                class="w-full h-10 font-semibold text-gray-900 bg-transparent border-b border-gray-200 focus:border-primary focus:outline-none">
+                                                class="w-full font-bold text-gray-900 bg-transparent border-b border-gray-200 focus:border-primary focus:outline-none py-2 px-1">
                                         </div>
                                     </div>
 
-                                    <div class="pt-2">
-                                        <button type="submit"
-                                            class="w-full bg-primary hover:bg-blue-800 text-white font-bold py-3 sm:py-4 rounded-xl shadow-lg hover:shadow-xl transition-all flex items-center justify-center gap-2 text-lg">
-                                            Search Flights
-                                        </button>
-                                    </div>
+                                    <button type="submit"
+                                        class="w-full bg-primary hover:bg-black text-white font-bold py-4 rounded-2xl shadow-xl shadow-primary/10 transition-all flex items-center justify-center gap-2 text-sm tracking-widest tap-target">
+                                        SEARCH AVAILABLE FLIGHTS
+                                    </button>
                                 </form>
                             </div>
                         </div>
@@ -135,13 +150,28 @@
                 </main>
             </div>
         </div>
-        <!-- Hero Image (Hidden on mobile to save scroll space, or simplified) -->
-        <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 h-56 sm:h-72 lg:h-full">
+        <!-- Hero Image -->
+        <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 h-64 sm:h-80 lg:h-full">
             <img class="w-full h-full object-cover"
                 src="https://images.unsplash.com/photo-1436491865332-7a61a109cc05?ixlib=rb-4.0.3&auto=format&fit=crop&w=2074&q=80"
-                alt="Luxury Flight">
+                alt="Luxury Jet" loading="lazy">
         </div>
     </div>
+
+    <!-- UI Scripts -->
+    <script>
+        window.toggleMobileMenu = function () {
+            const nav = document.getElementById('mobile-nav');
+            const panel = document.getElementById('mobile-nav-panel');
+            if (nav.classList.contains('hidden')) {
+                nav.classList.remove('hidden');
+                setTimeout(() => panel.classList.remove('-translate-x-full'), 10);
+            } else {
+                panel.classList.add('-translate-x-full');
+                setTimeout(() => nav.classList.add('hidden'), 300);
+            }
+        };
+    </script>
 
 </body>
 
