--- a/login.html
+++ b/login.html
@@ -6,132 +6,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | CK Travels</title>
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@400;500;600;700&display=swap"
-        rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Google Identity Services -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-
-    <!-- Modular CSS System -->
-    <link rel="stylesheet" href="css/main.css">
-
-    <style>
-        .login-layout {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: '#1e40af',
+                        surface: '#f3f4f6',
+                    }
+                }
+            }
         }
-
-        .login-card {
-            width: 100%;
-            max-width: 420px;
-            padding: 40px;
-        }
-    </style>
+    </script>
 </head>
 
-<body>
+<body class="bg-surface font-sans text-gray-800 antialiased h-screen flex items-center justify-center p-4">
 
-    <div class="login-layout">
-        <div class="glass-panel login-card">
-            <div style="text-align: center; margin-bottom: 32px;">
-                <h1 style="font-size: 1.75rem; margin-bottom: 8px;">Login</h1>
-                <p style="color: var(--color-text-muted);">Sign in to your account or join us today</p>
+    <!-- Login Card -->
+    <div class="w-full max-w-md bg-white rounded-3xl shadow-2xl overflow-hidden border border-gray-100 flex flex-col">
+        <div class="p-8 sm:p-10">
+            <div class="text-center mb-10">
+                <a href="index.html" class="inline-flex items-center gap-1 mb-6 group">
+                    <span
+                        class="text-3xl font-bold tracking-tighter text-gray-900 group-hover:text-primary transition-colors">CK<span
+                            class="text-primary">.</span></span>
+                </a>
+                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Welcome Back</h1>
+                <p class="text-sm text-gray-400 font-medium">Please enter your details to continue</p>
             </div>
 
-            <form id="loginForm">
-                <div class="form-group">
-                    <input type="email" id="email" class="input-field" placeholder=" " required>
-                    <label for="email" class="input-label">Email Address</label>
+            <form id="loginForm" class="space-y-5">
+                <div class="space-y-2">
+                    <label class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">Email Address</label>
+                    <input type="email" required
+                        class="w-full bg-gray-50 border border-gray-100 rounded-xl px-4 py-3.5 focus:bg-white focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all placeholder-gray-300"
+                        placeholder="pilot@cktravels.com">
                 </div>
 
-                <div class="form-group">
-                    <input type="password" id="pass" class="input-field" placeholder=" " required>
-                    <label for="pass" class="input-label">Password</label>
+                <div class="space-y-2">
+                    <label class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">Password</label>
+                    <input type="password" required
+                        class="w-full bg-gray-50 border border-gray-100 rounded-xl px-4 py-3.5 focus:bg-white focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all placeholder-gray-300"
+                        placeholder="••••••••">
                 </div>
 
-                <div style="display: flex; gap: 12px; margin-top: 16px;">
-                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <div class="flex items-center justify-between py-2">
+                    <label class="flex items-center text-xs font-bold text-gray-500 cursor-pointer">
+                        <input type="checkbox" class="w-4 h-4 rounded border-gray-200 text-primary mr-2"> Keep me signed
+                        in
+                    </label>
+                    <a href="#" class="text-xs font-bold text-primary hover:underline">Forgot password?</a>
                 </div>
-            </form>
 
+                <button type="submit"
+                    class="w-full bg-primary hover:bg-black text-white font-bold py-4 rounded-2xl shadow-xl shadow-primary/10 transition-all transform active:scale-[0.98] mt-4">
+                    LOGIN TO ACCOUNT
+                </button>
+                </section>
 
-            <div style="margin: 32px 0; text-align: center; position: relative;">
-                <div style="border-top: 1px solid #e0e0e0;"></div>
-                <span
-                    style="position: absolute; top: -10px; left: 50%; transform: translateX(-50%); background: white; padding: 0 16px; color: #666; font-size: 0.85rem;">OR</span>
-            </div>
+                <div class="mt-8 text-center space-y-4">
+                    <div class="relative">
+                        <div class="absolute inset-0 flex items-center">
+                            <div class="w-full border-t border-gray-100"></div>
+                        </div>
+                        <div class="relative flex justify-center text-xs"><span
+                                class="px-3 bg-white text-gray-400 font-bold uppercase tracking-widest">Or login
+                                with</span></div>
+                    </div>
 
-            <!-- Google Sign-In Button -->
-            <div id="g_id_onload"
-                data-client_id="362166287092-2bmtjlj84rcu0vnrq55u6ivevjogd74q.apps.googleusercontent.com"
-                data-callback="handleGoogleSignIn" data-auto_prompt="false">
-            </div>
-            <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="signin_with"
-                data-shape="rectangular" data-logo_alignment="left" data-width="100%">
-            </div>
+                    <button
+                        class="w-full border border-gray-200 py-3.5 rounded-2xl font-bold text-sm text-gray-700 hover:bg-gray-50 transition-all flex items-center justify-center gap-3">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5"
+                            alt="Google">
+                        SIGN IN WITH GOOGLE
+                    </button>
 
-            <div style="margin-top: 24px; text-align: center; font-size: 0.9rem; color: var(--color-text-dim);">
-                <p style="margin-bottom: 12px;">New to CK Travels?</p>
-                <a href="#" class="btn btn-signup btn-block">Sign Up Now</a>
-                <div style="margin-top: 16px;">
-                    <a href="#" style="border-bottom: 1px dotted var(--color-text-muted);">Forgot Password?</a>
+                    <p class="text-sm text-gray-500">
+                        New here? <a href="#" class="text-primary font-bold hover:underline">Create an account</a>
+                    </p>
                 </div>
-            </div>
+        </div>
+
+        <div class="bg-gray-50 p-6 text-center border-t border-gray-100">
+            <p class="text-[10px] text-gray-400 font-bold uppercase tracking-widest italic">Protected by global
+                encryption standard RSA-2048</p>
         </div>
     </div>
 
-    <script type="module">
-        import { setUser } from './js/auth.js';
-
-        // Handle traditional email/password login
-        document.getElementById('loginForm').addEventListener('submit', function (e) {
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', (e) => {
             e.preventDefault();
-
-            const email = document.getElementById('email').value.trim().toLowerCase();
-            const password = document.getElementById('pass').value;
-
-            // Create user data from email (mock authentication)
-            const userData = {
-                name: email.split('@')[0],
-                email: email,
-                loginMethod: 'email',
-                role: 'user' // Default to user in the public login page
-            };
-
-            // Save user data
-            setUser(userData);
-
-            // Redirect to dashboard
-            window.location.href = './dashboard.html';
+            // Mock login
+            window.location.href = 'index.html';
         });
-
-        // Handle Google Sign-In callback
-        window.handleGoogleSignIn = function (response) {
-            // Decode JWT token to get user info
-            const payload = JSON.parse(atob(response.credential.split('.')[1]));
-
-            const userData = {
-                name: payload.name,
-                email: payload.email,
-                picture: payload.picture,
-                googleId: payload.sub,
-                loginMethod: 'google',
-                role: 'user'
-            };
-
-            // Save user data
-            setUser(userData);
-
-            // Redirect to dashboard
-            window.location.href = './dashboard.html';
-        };
     </script>
 </body>
 
