--- a/dashboard.html
+++ b/dashboard.html
@@ -4,124 +4,205 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | CK Travels</title>
+    <title>Member Portal | CK Travels Premium</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet">
 
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                        serif: ['Playfair Display', 'serif'],
+                    },
+                    colors: {
+                        primary: '#1e40af',
+                        surface: '#fafafa',
+                    }
+                }
+            }
+        }
+    </script>
     <style>
-        .dashboard-card {
-            background: #fff;
-            border: var(--sh-border);
-            border-radius: 8px;
-            padding: 24px;
+        .glass-header {
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
         }
 
-        .stat-label {
-            color: #666;
-            font-size: 0.9rem;
-            margin-bottom: 8px;
-            text-transform: uppercase;
-            font-weight: 600;
+        .stat-card {
+            transition: all 0.3s ease;
         }
 
-        .stat-value {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: var(--sh-black);
+        .stat-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.05);
         }
     </style>
 </head>
 
-<body>
+<body class="bg-[#fcfcfc] font-sans text-gray-900 antialiased overflow-x-hidden">
 
-    <nav class="navbar">
-        <a href="index.html" class="logo">CK Travels</a>
-        <div class="nav-links">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="flights.html" class="nav-item">Flights</a>
-            <a href="packages.html" class="nav-item">Packages</a>
-            <a href="booking.html" class="nav-item active">My Trips</a>
-        </div>
-        <div style="display: flex; gap: 12px; align-items: center;">
-            <a href="login.html" class="btn btn-signup btn-sm">Sign Up</a>
-            <a href="login.html" class="btn btn-secondary btn-sm">Login</a>
+    <!-- Header -->
+    <nav class="glass-header border-b border-gray-100 sticky top-0 z-50 h-20">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
+            <div class="flex justify-between items-center h-full">
+                <a href="index.html" class="flex-shrink-0 flex items-center gap-1 group">
+                    <span
+                        class="text-3xl font-extrabold tracking-tighter text-gray-900 group-hover:text-primary transition-colors">CK<span
+                            class="text-primary group-hover:text-amber-500 transition-colors">.</span></span>
+                </a>
+
+                <div class="flex items-center gap-6">
+                    <div class="hidden sm:flex flex-col items-end">
+                        <span class="text-[10px] font-bold text-amber-500 uppercase tracking-widest">Platinum
+                            Member</span>
+                        <span class="text-sm font-bold">Johnathan Doe</span>
+                    </div>
+                    <div class="w-12 h-12 rounded-full border-2 border-primary/20 p-1">
+                        <img src="https://i.pravatar.cc/100?u=premium" class="w-full h-full rounded-full object-cover"
+                            alt="Profile">
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
 
-    <script type="module">
-        import { updateNavigation, getUser, logout } from './js/auth.js';
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 flex flex-col lg:flex-row gap-12">
 
-        document.addEventListener('DOMContentLoaded', () => {
-            updateNavigation();
-
-            // Custom handle for dashboard profile
-            const user = getUser();
-            if (user) {
-                document.getElementById('user-name').textContent = user.name || user.email;
-            }
-        });
-
-        // Handle Logout in dashboard specifically
-        window.handleLogout = function (e) {
-            e.preventDefault();
-            if (confirm('Are you sure you want to log out?')) {
-                logout();
-            }
-        };
-    </script>
-
-    <div class="container os-layout" style="grid-template-columns: 240px 1fr;">
-
-        <!-- Sidebar Menu -->
-        <aside>
-            <div class="dashboard-card" style="padding: 16px;">
-                <a href="#" class="btn btn-secondary btn-block btn-sm"
-                    style="justify-content: flex-start; margin-bottom: 8px; background: #f0f0f0; border-color: transparent;">Overview</a>
-                <a href="#" class="btn btn-link btn-block btn-sm"
-                    style="justify-content: flex-start; padding: 12px; color: #666;">Bookings</a>
-                <a href="#" class="btn btn-link btn-block btn-sm"
-                    style="justify-content: flex-start; padding: 12px; color: #666;">Saved</a>
-                <a href="#" class="btn btn-link btn-block btn-sm"
-                    style="justify-content: flex-start; padding: 12px; color: #666;">Settings</a>
-                <div style="height: 1px; background: #eee; margin: 12px 0;"></div>
-                <a href="#" onclick="handleLogout(event)"
-                    style="font-size: 0.85rem; color: #ef4444; padding-left: 12px; font-weight: 600;">Log Out</a>
+        <!-- Sidebar Navigation -->
+        <aside class="w-full lg:w-64 space-y-2">
+            <a href="#"
+                class="flex items-center gap-4 px-6 py-4 rounded-2xl bg-primary text-white font-bold shadow-xl shadow-primary/20 transition-all">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                </svg>
+                Overview
+            </a>
+            <a href="#"
+                class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-500 hover:bg-gray-50 hover:text-black font-semibold transition-all">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                Trip History
+            </a>
+            <a href="#"
+                class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-500 hover:bg-gray-50 hover:text-black font-semibold transition-all">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                </svg>
+                Favorites
+            </a>
+            <a href="#"
+                class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-500 hover:bg-gray-50 hover:text-black font-semibold transition-all">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                </svg>
+                Security
+            </a>
+            <div class="pt-10">
+                <button onclick="window.location.href='index.html'"
+                    class="w-full text-left px-6 text-red-400 font-bold text-xs uppercase tracking-widest hover:text-red-600 transition-colors">Terminate
+                    Session</button>
             </div>
         </aside>
 
-        <!-- Dashboard Content -->
-        <main>
-            <h1 style="font-size: 2rem; margin-bottom: 24px;">Dashboard</h1>
+        <!-- Main Content -->
+        <main class="flex-1 space-y-12">
 
-            <!-- Stats -->
-            <div class="grid-3" style="margin-bottom: 32px;">
-                <div class="dashboard-card">
-                    <div class="stat-label">Upcoming</div>
-                    <div class="stat-value">1</div>
+            <header>
+                <h1 class="text-5xl font-serif font-bold italic mb-4">Member <span
+                        class="not-italic text-primary font-bold">Portal.</span></h1>
+                <p class="text-gray-400 font-medium">Welcome back, Johnathan. Your next departure is in <span
+                        class="text-primary font-bold">12 days</span>.</p>
+            </header>
+
+            <!-- Quick Stats -->
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-white p-8 rounded-[32px] border border-gray-50 shadow-sm stat-card">
+                    <div class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-4">Miles Accrued</div>
+                    <div class="text-4xl font-black">124,500</div>
+                    <div class="mt-4 text-[10px] font-bold text-green-500">+12% from last trip</div>
                 </div>
-                <div class="dashboard-card">
-                    <div class="stat-label">Total Trips</div>
-                    <div class="stat-value">8</div>
+                <div class="bg-white p-8 rounded-[32px] border border-gray-50 shadow-sm stat-card">
+                    <div class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-4">Routes Explored
+                    </div>
+                    <div class="text-4xl font-black">14</div>
+                    <div class="mt-4 text-[10px] font-bold text-blue-500">Platinum Tier Status</div>
                 </div>
-                <div class="dashboard-card">
-                    <div class="stat-label">Status</div>
-                    <div class="stat-value" style="color: var(--sh-black);">Platinum</div>
+                <div class="bg-white p-8 rounded-[32px] border border-gray-50 shadow-sm stat-card">
+                    <div class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-4">Upcoming Stays</div>
+                    <div class="text-4xl font-black">02</div>
+                    <div class="mt-4 text-[10px] font-bold text-amber-500 underline cursor-pointer">View Reservation
+                    </div>
                 </div>
             </div>
 
-            <!-- Recent Activity -->
-            <h2 style="font-size: 1.25rem; margin-bottom: 16px;">Upcoming Travel</h2>
+            <!-- Active Trip Section -->
+            <section class="space-y-6">
+                <h3 class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">Current Itinerary</h3>
+                <div class="bg-gray-900 rounded-[40px] p-8 md:p-12 text-white relative overflow-hidden shadow-2xl">
+                    <div class="relative z-10">
+                        <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-8 mb-12">
+                            <div>
+                                <div class="text-[10px] font-bold text-amber-400 uppercase tracking-widest mb-4">
+                                    CONFIRMED • FIRST CLASS</div>
+                                <h2 class="text-4xl font-serif font-bold">Dubai International → London Heathrow</h2>
+                                <p class="text-white/50 font-medium mt-2">Flight CK007 • Boeing 787-9 Dreamliner</p>
+                            </div>
+                            <div
+                                class="bg-white text-black px-8 py-4 rounded-2xl font-bold text-sm shadow-xl shadow-white/5 cursor-pointer hover:bg-amber-50 transition-colors">
+                                BOARDING PASS</div>
+                        </div>
 
-            <div class="dashboard-card" style="display: flex; align-items: center; gap: 24px;">
-                <div style="padding: 12px; background: #f8f8f8; border-radius: 8px; border: 1px solid #eee;">
-                    <span style="font-size: 1.5rem;">✈️</span>
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-8 py-8 border-t border-white/10">
+                            <div>
+                                <div class="text-[10px] font-bold text-white/40 uppercase tracking-widest mb-1">
+                                    Departure</div>
+                                <div class="text-xl font-bold">24 OCT</div>
+                                <div class="text-xs text-white/60">08:45 AM local</div>
+                            </div>
+                            <div>
+                                <div class="text-[10px] font-bold text-white/40 uppercase tracking-widest mb-1">Seat
+                                </div>
+                                <div class="text-xl font-bold">1A</div>
+                                <div class="text-xs text-white/60">Privé Cabin</div>
+                            </div>
+                            <div>
+                                <div class="text-[10px] font-bold text-white/40 uppercase tracking-widest mb-1">Status
+                                </div>
+                                <div class="text-xl font-bold text-green-400">ON TIME</div>
+                                <div class="text-xs text-white/60">Gate A14</div>
+                            </div>
+                            <div>
+                                <div class="text-[10px] font-bold text-white/40 uppercase tracking-widest mb-1">Duration
+                                </div>
+                                <div class="text-xl font-bold">7h 15m</div>
+                                <div class="text-xs text-white/60">Direct Route</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Abstract plane trail decoration -->
+                    <div class="absolute -right-20 -top-20 opacity-10">
+                        <svg class="w-96 h-96" fill="white" viewBox="0 0 24 24">
+                            <path
+                                d="M21 16V14L13 9V3.5C13 2.67 12.33 2 11.5 2S10 2.67 10 3.5V9L2 14V16L10 13.5V19L8 20.5V22L11.5 21L15 22V20.5L13 19V13.5L21 16Z" />
+                        </svg>
+                    </div>
                 </div>
-                <div style="flex-grow: 1;">
-                    <h3 style="font-size: 1.1rem; margin-bottom: 4px;">Flight to London (LHR)</h3>
-                    <p style="color: #666; font-size: 0.9rem;">Oct 24 • Emirates • First Class</p>
-                </div>
-                <button class="btn btn-secondary btn-sm">Manage</button>
-            </div>
+            </section>
 
         </main>
     </div>
