--- a/login.html
+++ b/login.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | CK Travels</title>
+    <title>Portal Access | CK Travels Premium</title>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet">
 
     <script>
         tailwind.config = {
@@ -16,10 +18,11 @@
                 extend: {
                     fontFamily: {
                         sans: ['Inter', 'sans-serif'],
+                        serif: ['Playfair Display', 'serif'],
                     },
                     colors: {
                         primary: '#1e40af',
-                        surface: '#f3f4f6',
+                        surface: '#fafafa',
                     }
                 }
             }
@@ -27,84 +30,86 @@
     </script>
 </head>
 
-<body class="bg-surface font-sans text-gray-800 antialiased h-screen flex items-center justify-center p-4">
+<body
+    class="bg-surface font-sans text-gray-900 antialiased h-screen flex items-center justify-center p-6 relative overflow-hidden">
 
-    <!-- Login Card -->
-    <div class="w-full max-w-md bg-white rounded-3xl shadow-2xl overflow-hidden border border-gray-100 flex flex-col">
-        <div class="p-8 sm:p-10">
-            <div class="text-center mb-10">
-                <a href="index.html" class="inline-flex items-center gap-1 mb-6 group">
-                    <span
-                        class="text-3xl font-bold tracking-tighter text-gray-900 group-hover:text-primary transition-colors">CK<span
-                            class="text-primary">.</span></span>
-                </a>
-                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Welcome Back</h1>
-                <p class="text-sm text-gray-400 font-medium">Please enter your details to continue</p>
-            </div>
-
-            <form id="loginForm" class="space-y-5">
-                <div class="space-y-2">
-                    <label class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">Email Address</label>
-                    <input type="email" required
-                        class="w-full bg-gray-50 border border-gray-100 rounded-xl px-4 py-3.5 focus:bg-white focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all placeholder-gray-300"
-                        placeholder="pilot@cktravels.com">
-                </div>
-
-                <div class="space-y-2">
-                    <label class="text-xs font-bold text-gray-400 uppercase tracking-widest ml-1">Password</label>
-                    <input type="password" required
-                        class="w-full bg-gray-50 border border-gray-100 rounded-xl px-4 py-3.5 focus:bg-white focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all placeholder-gray-300"
-                        placeholder="••••••••">
-                </div>
-
-                <div class="flex items-center justify-between py-2">
-                    <label class="flex items-center text-xs font-bold text-gray-500 cursor-pointer">
-                        <input type="checkbox" class="w-4 h-4 rounded border-gray-200 text-primary mr-2"> Keep me signed
-                        in
-                    </label>
-                    <a href="#" class="text-xs font-bold text-primary hover:underline">Forgot password?</a>
-                </div>
-
-                <button type="submit"
-                    class="w-full bg-primary hover:bg-black text-white font-bold py-4 rounded-2xl shadow-xl shadow-primary/10 transition-all transform active:scale-[0.98] mt-4">
-                    LOGIN TO ACCOUNT
-                </button>
-                </section>
-
-                <div class="mt-8 text-center space-y-4">
-                    <div class="relative">
-                        <div class="absolute inset-0 flex items-center">
-                            <div class="w-full border-t border-gray-100"></div>
-                        </div>
-                        <div class="relative flex justify-center text-xs"><span
-                                class="px-3 bg-white text-gray-400 font-bold uppercase tracking-widest">Or login
-                                with</span></div>
-                    </div>
-
-                    <button
-                        class="w-full border border-gray-200 py-3.5 rounded-2xl font-bold text-sm text-gray-700 hover:bg-gray-50 transition-all flex items-center justify-center gap-3">
-                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5"
-                            alt="Google">
-                        SIGN IN WITH GOOGLE
-                    </button>
-
-                    <p class="text-sm text-gray-500">
-                        New here? <a href="#" class="text-primary font-bold hover:underline">Create an account</a>
-                    </p>
-                </div>
+    <!-- Abstract Background -->
+    <div class="absolute inset-0 z-0">
+        <div
+            class="absolute top-0 left-0 w-full h-full bg-[radial-gradient(circle_at_20%_20%,#eff6ff_0%,transparent_50%)]">
         </div>
-
-        <div class="bg-gray-50 p-6 text-center border-t border-gray-100">
-            <p class="text-[10px] text-gray-400 font-bold uppercase tracking-widest italic">Protected by global
-                encryption standard RSA-2048</p>
+        <div
+            class="absolute bottom-0 right-0 w-full h-full bg-[radial-gradient(circle_at_80%_80%,#fef3c7_0%,transparent_50%)] opacity-50">
         </div>
     </div>
+
+    <!-- Login Card -->
+    <div
+        class="w-full max-w-[480px] bg-white rounded-[48px] shadow-2xl overflow-hidden border border-gray-100 relative z-10 p-10 md:p-14">
+
+        <div class="text-center mb-12">
+            <a href="index.html" class="inline-flex items-center gap-1 mb-10 group">
+                <span
+                    class="text-4xl font-extrabold tracking-tighter text-gray-900 group-hover:text-primary transition-colors">CK<span
+                        class="text-primary group-hover:text-amber-500 transition-colors">.</span></span>
+            </a>
+            <h1 class="text-4xl font-serif font-bold text-gray-900 mb-4 italic">Welcome <span
+                    class="not-italic">Back.</span></h1>
+            <p class="text-gray-400 font-medium tracking-wide">Enter your secure credentials to manage your journeys.
+            </p>
+        </div>
+
+        <form id="loginForm" class="space-y-8">
+            <div class="space-y-2">
+                <label class="text-[10px] font-bold text-gray-400 uppercase tracking-[0.2em] ml-4">Email
+                    Identifier</label>
+                <input type="email" required placeholder="name@domain.com"
+                    class="w-full bg-surface border border-gray-100 rounded-3xl px-8 py-5 focus:border-primary focus:bg-white focus:shadow-xl focus:shadow-primary/5 outline-none transition-all font-bold placeholder-gray-300">
+            </div>
+
+            <div class="space-y-2">
+                <div class="flex justify-between items-center px-4">
+                    <label class="text-[10px] font-bold text-gray-400 uppercase tracking-[0.2em]">Security Key</label>
+                    <a href="#"
+                        class="text-[10px] font-bold text-primary hover:text-black transition-colors underline tracking-widest uppercase">Lost
+                        Key?</a>
+                </div>
+                <input type="password" required placeholder="••••••••"
+                    class="w-full bg-surface border border-gray-100 rounded-3xl px-8 py-5 focus:border-primary focus:bg-white focus:shadow-xl focus:shadow-primary/5 outline-none transition-all font-bold placeholder-gray-300">
+            </div>
+
+            <button type="submit"
+                class="w-full bg-primary hover:bg-black text-white font-bold py-6 rounded-3xl shadow-2xl shadow-primary/20 transition-all transform active:scale-[0.98] tracking-[0.2em] text-xs">
+                AUTHENTICATE
+            </button>
+        </form>
+
+        <div class="mt-12 text-center">
+            <p class="text-sm text-gray-400">
+                New to the platform? <a href="#" class="text-primary font-bold hover:text-black transition-colors">Apply
+                    for Membership</a>
+            </p>
+        </div>
+
+        <div class="mt-12 pt-8 border-t border-gray-50 flex items-center justify-center gap-4 grayscale opacity-30">
+            <span class="text-[8px] font-bold tracking-[0.3em] uppercase">Secured by CloudArmor IPX</span>
+        </div>
+    </div>
+
+    <!-- Background Elements -->
+    <div class="fixed top-20 right-20 w-32 h-32 border-2 border-gray-100 rounded-full opacity-20 animate-pulse"></div>
+    <div class="fixed bottom-20 left-20 w-48 h-48 border-2 border-gray-100 rounded-full opacity-20"></div>
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', (e) => {
             e.preventDefault();
-            // Mock login
-            window.location.href = 'index.html';
+            // Mock login for UX
+            const btn = e.target.querySelector('button');
+            btn.textContent = "VERIFYING...";
+            btn.disabled = true;
+            setTimeout(() => {
+                window.location.href = 'index.html';
+            }, 1000);
         });
     </script>
 </body>
